--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ body {font-family: "Lato", sans-serif}
 <h2>Извините, Вы просматриваете вебверсию нашего приложения. Качество и скорость скорее всего будут выше, если Вы решите смотреть через наше приложение. <a href='https://play.google.com/store/apps/details?id=com.XGamingAramVirabyan&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></h2>
 
 <div style='position: relative; padding-bottom: 56%; height: 0;'><iframe src='http://app.viloud.tv/player/embed/channel/4a1cecaadf13f5e28ef677ec82955c8b?autoplay=1&volume=0&controls=1&title=0&share=0&random=0' style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' frameborder='0' allow='autoplay' allowfullscreen></iframe></div><p>
-<!-- Page content -->
+
+  <div style='position: relative; padding-bottom: 56%; height: 0;'><iframe src='http://app.viloud.tv/player/embed/channel/4a1cecaadf13f5e28ef677ec82955c8b?autoplay=1&volume=1&controls=1&title=1&share=1&random=0' style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' frameborder='0' allow='autoplay' allowfullscreen></iframe></div><p><a href='https://viloud.tv/channel/4a1cecaadf13f5e28ef677ec82955c8b'>XGaming</a> on <a href='https://viloud.tv'>Viloud</a></p><!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
 
